--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="dark light">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Radio Amante</title>
+  <title>Radio Aventura</title>
     <meta property="og:image" content="assets/redes.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="360">
-    <meta property="og:title" content="Radio Amante">
+    <meta property="og:title" content="Radio Aventura">
     <meta property="og:description" content="Tu Estación Fiel...">
   <link rel="stylesheet" href="npm/swiper%4011/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/main.min.css">
@@ -55,7 +55,7 @@
     <div class="player flex column">
       <div class="header-bar">
         <div class="container flex g-1 items-center justify-between l:row column">
-          <img src="assets/logo.png" alt="logo" class="header-logo player-logo" height="46">
+          <img src="https://aventura.estacionkusmedios.com/img/logo.png" alt="logo" width="376" height="98" class="header-logo player-logo">
           <div class="header-right flex g-0.5 l:ml-auto">
             <button class="btn send-prm " data-outside="prm2"><i class="ri-mail-send-fill"></i> Promociones</button>
             <button class="btn station-prm none" data-outside="prm"><i class="ri-disc-fill"></i> Estaciones</button>
@@ -109,7 +109,7 @@
               <!-- INFO -->
               <div class="player-info l:text-left text-center uppercase">
                 <p class="color-text-inverse flex l:justify-start justify-center fs-7 fw-600 g-0.5 items-center"><span class="badge">On air</span>Reproduciendo</p>
-                <h1 class="player-title station-name truncante-line color-title-inverse song-name m:fs-2 fs-3 fw-700">Radio Amante</h1>
+                <h1 class="player-title station-name truncante-line color-title-inverse song-name m:fs-2 fs-3 fw-700">Radio Aventura</h1>
                 <p class="player-description station-description song-artist color-text-inverse m:fs-5 fs-6 fw-600">Artista</p>
 
                 <div class="player-actions flex wrap justify-center m:justify-start g-0.5 mt-1">
@@ -351,7 +351,7 @@
    <footer class="footer m:mt-2 mt-1">
     <div class="footer-wrapper container pb-1.5 pt-1.5 flex items-center justify-center column g-1">
             <div class="footer-copyright flex g-1 items-center justify-between l:row column pb-1 pt-1">
-          <small class="m:fs-6"><strong class="color-title fw-700"> </strong>Powered by MakroDigital</small>
+          <small class="m:fs-6"><strong class="color-title fw-700"> </strong>Powered by ESTACIONKUSMEDIOS</small>
    
       </div>
   </div></footer>
