--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
       sliderTiming: 10000,
       carouselTiming: 5000,
       timeRefresh: 10000,
-      base_url: 'https://pro.webzonaradio.com/panelradiotv/server/public/',
+      base_url: 'https://streaming.live365.com/a32532',
       id_user: 12,
       multi_stream: false,
       service: 'deezer',
@@ -193,7 +193,7 @@
           <div class="container">
             <div class="section-title text-center mb-1">
               <h2 class="section-heading color-title m:fs-3 fw-800 uppercase">
-                <span class="section-name">Noticias 593</span>
+                <span class="section-name">Noticias</span>
               </h2>
             </div>
             <div class="news-wrapper relative">
