--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
       timeRefresh: 10000,
       base_url: 'https://streaming.live365.com/a32532',
       id_user: 12,
-      multi_stream: false,
+      multi_stream: true,
       service: 'deezer',
       module_video_tops: true,
       module_news: true,
