--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,4 @@
-﻿
-  <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -31,8 +30,8 @@
       timeRefresh: 10000,
       base_url: 'https://streaming.live365.com/a32532',
       id_user: 12,
-      multi_stream: true,
-      service: 'deezer',
+      multi_stream: false,
+      service: 'live365',
       module_video_tops: true,
       module_news: true,
       module_team: true,
